--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "David Andersson",
@@ -14,6 +14,7 @@
     "mongodb": "^6.9.0"
   },
   "devDependencies": {
+    "@types/node": "^22.5.5",
     "typescript": "^5.6.2"
   }
 }
